# mybase

./: .gitignore  CMakeLists.txt  README.md  config.json  mybase.json  project.py
.project/: project_lock.json  version_log.json
cmake/: flags.cmake
package/source/config/: mybase.json
src/: CMakeLists.txt  main.cpp  main.h
src/app/: app_curing_param.h  mybase.cpp  mybase.h
src/core/: configure.cpp  configure.h  configure_def.cpp  configure_def.h  configure_in.h  configure_in.h.in  log.cpp  log.h  log_init.h  memory.cpp  memory.h  module.cpp  module.h  module_def.cpp  module_def.h  version.cpp  version.h
src/utils/: macros.h
test/: CMakeLists.txt  test.cpp  test.h
